--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = "http://localhost:1313/"
+baseURL = "https://ramazangasratov.github.io/"
 languageCode = "ru-ru"
 defaultContentLanguage = "ru-ru"
 title = "Ramazan Gasratov"
